# coffeegrindsize

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  IMPLEMENTATION_PLAN.md  MODERNIZATION_ASSESSMENT.md  README.md  coffeegrindsize.py  pyproject.toml
.claude/: work-log.md
.github/workflows/: ci.yml
coffeegrindsize/: __init__.py  __main__.py  config.py  models.py  utils.py
coffeegrindsize/analysis/: __init__.py  clustering.py  geometry.py  simulation.py  statistics.py  threshold.py
coffeegrindsize/io/: __init__.py  csv_io.py
coffeegrindsize/ui/: __init__.py  app.py
tests/: conftest.py  test_clustering.py  test_defaults.py  test_geometry.py  test_io.py  test_pure_functions.py  test_snapshot.py  test_statistics.py  test_threshold.py
tests/fixtures/: golden_clusters.csv
